# distri

./: .env  .env.sample  .gitignore  .gitmodules  A2A_COMPLIANCE_FIX.md  A2A_ROUTE_UPDATE_SUMMARY.md  A2A_WELL_KNOWN_IMPLEMENTATION.md  AGENTS.md  AGENT_IMPLEMENTATION_SUMMARY.md  AGENT_MANAGEMENT.md  AGENT_REFACTORING_SUMMARY.md  AGENT_REFACTOR_SUMMARY.md  AGENT_TRANSFER_IMPLEMENTATION.md  AGENT_TRANSFER_REFACTORED.md  AGUI_PROTOCOL_IMPLEMENTATION.md  ARTIFACT_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CODE_AGENT_IMPLEMENTATION.md  Cargo.toml  DISTRI_A2A_INTEGRATION.md  Dockerfile  Dockerfile.sandbox  EMBEDDING_IMPLEMENTATION_SUMMARY.md  EXTENSIBLE_AGENTS.md  FINAL_IMPLEMENTATION.md  FRONTEND_TOOLS.md  HANDOVER_DEMO.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MEMORY_STORE_REFACTOR_SUMMARY.md  MEMORY_TOOL_README.md  MIGRATION_NOTES.md  MIGRATION_SUMMARY.md  Makefile  OAUTH_README.md  PROGRAMMABLE_AGENTS.md  README.md  REFACTORING_COMPLETE.md  (+40 more)
agents/: Cargo.toml
agents/src/: cli.rs  error.rs  executor.rs  lib.rs  llm.rs  logging.rs  main.rs  openai.rs  session.rs  store.rs  tests.rs  tools.rs  types.rs
agents/src/coordinator/: coordinator.rs  local.rs  log.rs  mod.rs  reason.rs  server.rs
agents/src/run/: chat.rs  event.rs  mod.rs  session.rs
agents/src/servers/: mod.rs  registry.rs  tavily.rs
app/: Cargo.toml
app/config/: config.yaml
app/src/: db.rs  logging.rs  main.rs  schema.rs
code-mcp/: Cargo.toml
code-mcp/src/: main.rs  python_runner.rs  server.rs
distri/: CUSTOM_AGENTS.md  CUSTOM_AGENTS_GUIDE.md  Cargo.toml  JS_AGENT_README.md  README.md  sample_js_agent_config.yaml
distri-a2a/: Cargo.toml  README.md  a2a.json
distri-a2a/src/: a2a_types.rs  lib.rs
distri-cli/: Cargo.toml
distri-cli/src/: chat.rs  cli.rs  commands.rs  config.rs  credentials.rs  input.rs  lib.rs  logging.rs  login.rs  main.rs  manifest.rs  message.rs  push.rs  registries.rs  sidecar.rs  threads.rs  tools.rs  traces.rs
distri-cli/tests/: coding.rs  remote.rs  smoke.rs  tools_test.rs
distri-filesystem/: Cargo.toml  README.md
distri-filesystem/src/: artifact.rs  artifact_tools.rs  lib.rs  object_store.rs  search.rs  store.rs  tools.rs  traits.rs
distri-filesystem/tests/: artifact_tests.rs
distri-formatter/: Cargo.toml
distri-formatter/src/: colors.rs  extract.rs  lib.rs  media.rs  state.rs  status.rs  telegram.rs  telegram_html.rs  text.rs  whatsapp.rs
distri-server/: Cargo.toml
distri-server/src/: agent_server.rs  lib.rs  reusable_server.rs  routes.rs  server.rs  types.rs
distri-types/: Cargo.toml  README.md
distri-types/prompt_templates/: code.hbs  planning.hbs  user.hbs
distri-types/src/: a2a_converters.rs  agent.rs  api_error.rs  auth.rs  authz.rs  channel_commands.rs  channels.rs  client_config.rs  connections.rs  context.rs  core.rs  credentials.rs  default_models.json  dynamic_tool.rs  errors.rs  events.rs  execution.rs  filesystem.rs  hooks.rs  http_request.rs  integration.rs  invocation.rs  lib.rs  mcp.rs  mock_tool.rs  model_catalog.rs  models.rs  orchestrator.rs  prompt.rs  resolve.rs  runner.rs  skill.rs  stores.rs  tenant_context.rs  thinking.rs  thinking_phrases.json  todos.rs  tool.rs  tts.rs  ui_tool_render.rs  (+3 more)
distri-workflow/: Cargo.toml  architecture.md  roadmap.md
distri-workflow/src/: executor.rs  lib.rs  resolve.rs  runs.rs  step_executions.rs  store.rs  tests.rs  trigger_registry.rs  types.rs  workflow_store.rs
distri/examples/: programmable_agents.rs
distri/src/: a2a.rs  agent.rs  agent_store.rs  agents.rs  api_request_tool.rs  cli.rs  client.rs  client_app.rs  client_http_request.rs  client_stream.rs  config.rs  engine.rs  error.rs  executor.rs  external_tools_runtime.rs  hooks_runtime.rs  langdb.rs  lib.rs  llm.rs  local_tools.rs  logging.rs  main.rs  message.rs  platform_tool.rs  platform_tools.rs  printer.rs  prompt_utils.rs  run.rs  secret_cache.rs  store.rs  sub_task_tracker.rs  tool_formatter.rs  tools.rs  types.rs  validate.rs  workflow_executor.rs
distri/tests/: external_tools_approval_test.rs  smoke.rs  workflow_integration.rs
samples/code-agent/: Cargo.toml  README.md  definition.yaml
samples/coder/: Cargo.toml  README.md  assistant_prompt.md
samples/custom-agents/: Cargo.toml  README.md  definition.yaml
samples/distri-search/: Cargo.toml  PROJECT_SUMMARY.md  README.md  deep-search-agent.yaml  deep-search-config.yaml  deep-search.yaml  definition.yaml
samples/embedding-distri-server/: Cargo.toml  README.md  config.yaml  test-config.yaml
samples/scraper/: .env.example  Cargo.toml  README.md  base-config.yaml  definition.yaml
samples/twitter-bot/: Cargo.toml  definition.yaml
server/: .env.sample  .gitignore  Agents.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  config_schema.json  distri.example.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
server/agents/: README.md  _adhoc_base.md  agent_designer.md  browser.md  cli_agent.md  code_executor.md  coder.md  deepagent.md  deepresearch.md  deepsearch.md  distri.md  distri_browser_runner.md  distri_runner.md  explore.md  fast_search.md  inline_search.md  notes_summariser.md  plan.md  scrape.md  scripter.md  search.md  web_agent.md
server/cli-auth-server/: Cargo.toml
server/distri-auth/: Cargo.toml
server/distri-core/: Cargo.toml  model_pricing.json
server/distri-filesystem/: Cargo.toml
server/distri-parsers/: Cargo.toml
server/distri-plugin-executor/: Cargo.toml  build.rs
server/distri-plugins/: Cargo.toml
server/distri-server/: Cargo.toml  build.rs
server/distri-server-cli/: Cargo.toml
server/distri-stores/: Cargo.toml
server/llm-gateway/: Cargo.toml  libtypes.rlib
server/notes/: PLUGIN_ARCHITECTURE.md  agent-configuration.md  artifact-filesystem-architecture.md  context-management-design.md  grep-implementation.md  reflection-system.md  typescript-plugins.md  wasm-components.md  workspace-refactor-plan.md
twitter-mcp/: Cargo.toml  README.md
twitter-mcp/examples/: async.rs  channel.rs  client.rs
twitter-mcp/src/: lib.rs  main.rs  server.rs  tests.rs
(+891 files in other folders)
