[workspace]
resolver = "2"

members = [
  "distri-cli",
  "distri-a2a",
  "distri-types",
  "distri-workflow",

  "distri-formatter",
  "distri",
  # server
  "server/distri-core",
  "server/distri-filesystem",
  "server/distri-stores",
  "server/distri-server",
  "server/distri-server-cli",
  "server/distri-auth",
  "server/distri-parsers",
  "server/llm-gateway",
]
default-members = ["distri-cli", "server/distri-server-cli"]


[workspace.dependencies]
distri-types = { path = "distri-types", version = "0.3.7" }
async-trait = "0.1"
async-mcp = { version = "0.1.3" }
rmcp = { version = "1.4", default-features = false, features = [
  "client",
  "macros",
  "transport-child-process",
  "transport-streamable-http-client",
  "transport-streamable-http-client-reqwest",
  "client-side-sse",
  "reqwest",
] }
async-openai = { version = "0.32.2", features = [
  "completion-types",
  "chat-completion",
  "audio-types",
  "audio",
  "realtime-types",
  "realtime",
] }
anyhow = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
futures = "0.3.31"
reqwest = { version = "0.13.2", features = ["json", "form", "query"] }
tokio-util = { version = "0.7", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "js"] }
schemars = { version = "1.0.4", features = ["uuid1"] }
jsonschema = "0.45"
utoipa = { version = "5", features = ["actix_extras", "chrono", "uuid"] }
utoipa-actix-web = "0.1"
utoipa-scalar = { version = "0.3", features = ["actix-web"] }

# Actix web dependencies (standardized across distri-server and distri-auth)
actix-web = "4.4"
actix-cors = "0.7"
actix-web-lab = "0.26"
actix-ws = "0.4"
actix-rt = "2.9"
actix-files = "0.6"
actix-multipart = "0.7"

# browsr-client = { path = "../../browsr-cloud/browsr/browsr-client" }
# browsr-types = { path = "../../browsr-cloud/browsr/browsr-types" }
browsr-client = { version = "0.3.9" }
browsr-types = { version = "0.3.9" }

# Other shared dependencies
rand = "0.10"
futures-util = "0.3.31"

chrono = { version = "0.4", features = ["serde"] }
