[package]
name = "agents"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
async-openai = "0.17"
reqwest = { version = "0.12", features = ["json"] }
mcp-sdk = { git = "https://github.com/distriai/mcp-sdk.git", rev = "fd38b0063beb3138ce384851cc17971ef321fd10" }
