[package]
name = "agents"
version = "0.1.0"
edition = "2021"

[dependencies]
twitter-mcp = { path = "../twitter-mcp" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
async-openai = "0.17"
reqwest = { version = "0.12", features = ["json"] }
mcp-sdk = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
tracing = "0.1"
anyhow = { workspace = true }
futures = "0.3.31"
clap = { version = "4.5", features = ["derive"] }
dotenv = "0.15"
regex = "1.5"
serde_yaml = "0.9"
rustyline = "12.0.0"
dirs = "5.0"
jsonschema = "0.28.3"

[dev-dependencies]
dotenv = "0.15"
tempfile = "3.15.0"

[[bin]]
name = "distri"
path = "src/main.rs"
