[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
agents = { path = "../agents" }
twitter-mcp = { path = "../twitter-mcp" }
actix-web = { version = "4.4", features = ["cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
diesel = { version = "2.1", features = [
  "postgres",
  "r2d2",
  "chrono",
  "serde_json",
] }
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10"
dotenv = "0.15"
r2d2 = "0.8"
futures = "0.3"
futures-util = "0.3"
thiserror = "1.0"
reqwest = { version = "0.12.4", features = ["json"] }
redis = { version = "0.27.2", features = ["connection-manager", "tokio-comp"] }
firebase-auth = "0.4.3"
actix-web-lab = "0.23.0"
rand = "0.8"
serde_yaml = "0.9"
agent-twitter-client = { workspace = true }
uuid = { version = "1.7", features = ["v4"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-mcp = { workspace = true }
