[package]
name = "code-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
async-mcp = { workspace = true }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = { workspace = true }
async-trait = "0.1"
tracing-subscriber = "0.3"
tracing = "0.1"
url = "2.4"
twitter-v2 = "0.1"
uuid = { version = "1.0", features = ["v4"] }
