[package]
name = "distri-cli"
version = "0.2.4"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
dotenv = "0.15"
serde_json = { workspace = true }
tokio = { version = "1.0", features = ["full"] }

distri = { path = "../distri", version = "0.2.4" }
distri-a2a = { path = "../distri-a2a", version = "0.2.4" }
uuid = { version = "1.13.1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"

[dependencies.openssl]
version = "0.10"
features = ["vendored"]


[[bin]]
name = "distri"
path = "src/main.rs"
