[package]
name = "distri-cli"
version = "0.4.2"
edition = "2021"
description = "CLI for the Distri A2A agent platform"
license = "MIT"
repository = "https://github.com/distrihub/distri"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
dotenv = "0.15"
fuzzy-matcher = "0.3"
inquire = "0.7"
rustyline = { version = "15", features = ["derive"] }
regex = "1"
crossterm = "0.27"
serde_json = { workspace = true }
tokio = { version = "1.0", features = ["full"] }
toml = "0.8"
serde_yaml = "0.9"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
dirs = "5"
warp = "0.3"
serde = { workspace = true }
urlencoding = "2.1"

glob = "0.3"
distri = { path = "../distri", version = "0.4.2" }
distri-a2a = { path = "../distri-a2a", version = "0.4.2" }
distri-types = { path = "../distri-types", version = "0.4.2" }
async-trait = { workspace = true }
uuid = { version = "1.13.1", features = ["v4"] }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
flate2 = "1.0"
tar = "0.4"
sha2 = "0.10"
semver = "1.0"
hex = "0.4"
open = "5"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
distri-formatter = { path = "../distri-formatter", version = "0.4.2" }

[dependencies.openssl]
version = "0.10"
features = ["vendored"]


[[bin]]
name = "distri"
path = "src/main.rs"
