[package]
name = "distri-filesystem"
version = "0.2.4"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1.0", features = ["fs", "io-util"] }
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
distri-types = { path = "../distri-types" , version = "0.2.4" }
ignore = "0.4"
regex = "1.0"
grep = "0.3"
glob = "0.3"
rand = "0.8"
object_store = { version = "0.9", default-features = false, features = ["aws"] }
bytes = "1.6"
futures = "0.3"
schemars = { workspace = true }

[dev-dependencies] # jql = "7.0"  # Will add when implementing full JQL support
tempfile = "3.0"
