[package]
name = "distri-formatter"
version = "0.3.7"
edition = "2024"
description = "Shared event formatting logic for Distri (plain text, HTML, etc.)"
license = "MIT"
repository = "https://github.com/distrihub/distri"

[dependencies]
distri-types = { path = "../distri-types", version = "0.3.7" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
base64 = "0.22"
