[package]
name = "distri-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-web-lab = "0.22"
actix-rt = "2.9"
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures-util = "0.3"
async-stream = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.13", features = ["v4"] }
reqwest = { version = "0.11", features = ["json"] }

tracing = { workspace = true }
distri = { path = "../distri" }
distri-a2a = { path = "../distri-a2a" }
schemars = "0.8.21"
