[package]
name = "distri-server"
version = "0.1.0"
edition = "2021"

[features]
default = []
reusable = []

[dependencies]
actix-web = "4.4"
actix-web-lab = "0.22"
actix-rt = "2.9"
actix-cors = "0.7"
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
tokio = { workspace = true }
futures-util = "0.3"
async-stream = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.13", features = ["v4"] }

env_logger = "0.11"

tracing = "0.1"
tracing-subscriber = "0.3"
distri = { path = "../distri" }
distri-a2a = { path = "../distri-a2a" }

schemars = "0.8.21"
