[package]
name = "distri-workflow"
version = "0.4.0"
edition = "2021"
description = "Workflow engine for Distri — define, execute, and track multi-step workflows"
license = "MIT"
repository = "https://github.com/distrihub/distri"

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tokio = { workspace = true, features = ["rt", "macros"] }
tracing = { workspace = true }
jsonschema = "0.28"
distri-types = { path = "../distri-types", version = "0.4.0" }
anyhow = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
