[package]
name = "distri"
version = "0.1.0"
edition = "2021"

[dependencies]
twitter-mcp = { path = "../twitter-mcp" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
async-openai = "0.27.2"
reqwest = { version = "0.12", features = ["json"] }
async-mcp = { workspace = true }
regex = "1.5"
tracing = "0.1"
anyhow = { workspace = true }
futures = "0.3.31"
jsonschema = "0.28.3"
schemars = "0.8.21"
mcp-proxy = { path = "../proxy" }
secrecy = { version = "0.10.3", features = ["serde"] }
uuid = "1.13.1"
comfy-table = "7.0"

[dev-dependencies]
dotenv = "0.15"
tempfile = "3.15.0"
tracing-subscriber = { workspace = true }


[dependencies.openssl]
version = "0.10"
features = ["vendored"]
