[package]
name = "distri"
version = "0.2.10"
edition = "2024"
description = "Rust client for the Distri A2A agent platform"
license = "MIT"
readme = "README.md"
repository = "https://github.com/distrihub/distri"
homepage = "https://distri.dev"
documentation = "https://docs.rs/distri"
keywords = ["distri", "a2a", "agent", "llm", "workflow"]
categories = ["api-bindings", "asynchronous", "development-tools"]

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = "2.0"
tokio = { workspace = true, features = [
  "process",
  "sync",
  "macros",
  "rt-multi-thread",
] }
reqwest = { workspace = true, features = ["json", "stream", "gzip"] }
flate2 = "1.0"
reqwest-eventsource = "0.6"
distri-types = { path = "../distri-types", version = "0.2.10" }
distri-a2a = { path = "../distri-a2a", version = "0.2.10" }
distri-filesystem = { path = "../distri-filesystem", version = "0.2.10" }
base64 = "0.22"
image = { version = "0.24.9", default-features = false, features = [
  "png",
  "jpeg",
] }
viuer = "0.6.2"
which = "8.0"
dashmap = "6.1"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["serde", "v4"] }
tracing = "0.1"
async-trait = "0.1"
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
urlencoding = "2.1.3"
[dev-dependencies]
actix-web = { workspace = true }
