[workspace]
resolver = "2"

members = [
  "distri-core",
  "distri-server",
  "distri-server-cli",
  "distri-auth",
  "distri-parsers",
  "distri-stores",
]
default-members = ["distri-server-cli"]


[workspace.dependencies]
uuid = { version = "1.0", features = ["v4", "js"] }
async-trait = "0.1"
async-mcp = { version = "0.1.3" }
rmcp = { version = "1.4", default-features = false, features = [
  "client",
  "macros",
  "transport-child-process",
  "transport-streamable-http-client",
  "transport-streamable-http-client-reqwest",
  "client-side-sse",
  "reqwest",
] }
async-openai = { version = "0.32.2" }
anyhow = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
futures = "0.3.31"
reqwest = { version = "0.13.2", features = ["json", "form", "query"] }
tokio-util = { version = "0.7", features = ["full"] }

schemars = "1.0.4"
jsonschema = "0.33"

# Actix web dependencies (standardized across distri-server and distri-auth)
actix-web = "4.4"
actix-cors = "0.7"
actix-web-lab = "0.22"
actix-ws = "0.3"
actix-rt = "2.9"
actix-files = "0.6"
actix-multipart = "0.7"

browsr-client = { workspace = true }
browsr-types = { workspace = true }
# Other shared dependencies
rand = "0.10"
futures-util = "0.3.31"
