[package]
name = "twitter-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
mcp-sdk = { git = "https://github.com/distriai/mcp-sdk.git", rev = "fd38b0063beb3138ce384851cc17971ef321fd10" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
agent-twitter-client = "0.1.1"
async-trait = "0.1"
tracing-subscriber = "0.3"
tracing = "0.1"

[[bin]]
name = "twitter"
path = "src/main.rs"
