[package]
name = "twitter-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
mcp-sdk = { workspace = true }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = { workspace = true }
agent-twitter-client = "0.1.1"
async-trait = "0.1"
tracing-subscriber = "0.3"
tracing = "0.1"
url = "2.5.4"

[[bin]]
name = "twitter"
path = "src/main.rs"

[[example]]
name = "client"
path = "examples/client.rs"

[[example]]
name = "async"
path = "examples/async.rs"
