[package]
name = "twitter-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
rust-mcp-sdk = { workspace = true }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
agent-twitter-client = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"
url = "2.2"
async-trait = "0.1"
schemars = "0.8"

[dev-dependencies]
dotenv = "0.15"

[[bin]]
name = "twitter"
path = "src/main.rs"

[[example]]
name = "client"
path = "examples/client.rs"

[[example]]
name = "async"
path = "examples/async.rs"
