[package]
name = "code-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
distri = { path = "../../distri" }
distri-cli = { path = "../../distri-cli" }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
dotenv = "0.15"