[package]
name = "distri-coder"
version = "0.2.10"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
distri = { path = "../../distri" , version = "0.2.10" }
distri-cli = { path = "../../distri-cli" , version = "0.2.10" }
distri-types = { path = "../../distri-types" , version = "0.2.10" }
distri-server = { path = "../../server/distri-server" , version = "0.2.10" }
distri-filesystem = { path = "../../distri-filesystem" , version = "0.2.10" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
dotenv = "0.15"
open = "5.0"
reqwest = { workspace = true }
serde_yaml = "0.9"
regex = "1.5"
toml = "0.9.5"
dirs = "5.0"
uuid = "1.13.1"
async-trait = "0.1"
comfy-table = "7.0"
futures = "0.3.31"
futures-util = "0.3.31"
syntect = "5.0"
chrono = { workspace = true }
crossterm = "0.27"
inquire = "0.7"
fuzzy-matcher = "0.3"
deno_ast = { version = "0.42" }
mcp-crawl = { workspace = true }
mcp-tavily = { workspace = true }
tracing-subscriber = { workspace = true }

[[bin]]
name = "codela"
path = "src/main.rs"
