[package]
name = "distri-search"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies for the DeepSearch agent
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
async-trait = "0.1"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }

# Distri framework dependency (only enabled when needed)
distri = { path = "../../distri", optional = true }

[features]
default = []
full = ["distri"]

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"