[package]
name = "distri-search"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
distri = { path = "../../distri" }
distri-cli = { path = "../../distri-cli" }
distri-server = { path = "../../distri-server", features = ["reusable"] }


# Web server dependencies
actix-web = "4.4"
actix-cors = "0.7"

# CLI and utility dependencies
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
async-trait = "0.1"
dotenv = "0.15"

# MCP servers
mcp-spider = { git = "https://github.com/distrihub/mcp-servers.git", rev = "f427eaa" }
mcp-tavily = { git = "https://github.com/distrihub/mcp-servers.git", rev = "f427eaa" }

[[bin]]
name = "simple-search"
path = "src/bin/simple.rs"
