[package]
name = "embedding-distri-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.7"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }

# Note: distri dependencies commented out until compilation issues are resolved
# distri-server = { path = "../../distri-server" }
# distri = { path = "../../distri" }
# distri-a2a = { path = "../../distri-a2a" }