[package]
name = "embedding-distri-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "embedding_distri_server"
path = "src/lib.rs"

[dependencies]
actix-web = "4.4"
actix-cors = "0.7"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.5"
clap = { version = "4.5", features = ["derive"] }

distri-server = { path = "../../distri-server" }
distri = { path = "../../distri" }
distri-cli = { path = "../../distri-cli" }
distri-a2a = { path = "../../distri-a2a" }

dotenv = "0.15"
