[package]
name = "twitter-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
distri = { path = "../../distri" }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }
async-trait = "0.1"
dotenv = "0.15"
mcp-spider = { git = "https://github.com/distrihub/mcp-servers.git", rev = "f427eaa" }
mcp-tavily = { git = "https://github.com/distrihub/mcp-servers.git", rev = "f427eaa" }
mcp-twitter = { git = "https://github.com/distrihub/mcp-servers.git", rev = "f427eaa" }

[[bin]]
name = "twitter-bot"
path = "src/bin/twitter-bot.rs"
