[package]
name = "cli-auth-server"
version = "0.3.1"
edition = "2021"

[dependencies]
actix-web.workspace = true
actix-cors.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
distri-types = { path = "../../distri-types", version = "0.3.1" }
url = "2.5"
dotenvy = "0.15"
